# medical-rag-qa

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: gradio_demo.py  main.py  schemas.py
scripts/: ingest_multimodal.py
src/: config.py
src/embeddings/: clip_encoder.py  encoder.py
src/evaluation/: chunking_comparison.py  multimodal_eval.py  multimodal_test_queries.json  ragas_eval.py  test_queries.json
src/frameworks/: langchain_pipeline.py  llamaindex_pipeline.py
src/generation/: citations.py  llm_client.py  prompt_builder.py  refusal.py
src/ingestion/: chunkers.py  image_captioner.py  image_extractor.py  metadata.py  pdf_parser.py
src/retrieval/: fusion.py  multimodal_pipeline.py  pipeline.py  reranker.py  vector_store.py
tests/: conftest.py  test_api.py  test_chunking.py  test_clip_encoder.py  test_config.py  test_embeddings.py  test_evaluation.py  test_frameworks.py  test_fusion.py  test_generation.py  test_gradio_multimodal.py  test_image_captioner.py  test_image_extractor.py  test_ingestion.py  test_multimodal_api.py  test_multimodal_eval.py  test_multimodal_generation.py  test_multimodal_pipeline.py  test_reranker.py  test_retrieval_pipeline.py  test_vector_store.py
